# platform.core.api.screen-mirroring

./: CMakeLists.txt  capi-media-screen-mirroring.manifest  org.tizen.scmirroring.server.service
config/: scmirroring_src.ini
doc/: screen_mirroring_doc.h
include/: scmirroring_internal.h  scmirroring_private.h  scmirroring_sink.h  scmirroring_src.h  scmirroring_src_ini.h  scmirroring_type.h
miracast_server/: CMakeLists.txt  miracast_server.c  miracast_server.h  miracast_server_impl.c
packaging/: capi-media-screen-mirroring.spec  org.tizen.scmirroring.server.conf
src/: scmirroring_sink.c  scmirroring_src.c  scmirroring_src_ini.c
test/: CMakeLists.txt  scmirroring_test.c  scmirroring_wifi_direct_test.c
test_sink/: CMakeLists.txt  scmirroring_sink_test.c  scmirroring_sink_test.c.wifi
